# World_cup_assist

./: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml  run.py
.github/workflows/: ci.yml
src/stadium_assistant/: __init__.py  app.py  assistant.py  cache.py  config.py  context.py  guardrails.py  i18n.py  knowledge.py  llm.py
tests/: conftest.py  eval_cases.yaml  test_api.py  test_assistant.py  test_cache.py  test_config.py  test_context.py  test_evals.py  test_gemini.py  test_guardrails.py  test_security.py
tests/web/: telemetry.test.js
web/: app.js  index.html  style.css  telemetry.js
web/i18n/: de.json  en.json  es.json  fr.json  pt.json
